--- a/pdf.html
+++ b/pdf.html
@@ -30,7 +30,7 @@
 
                 <h2 class="mb-2">Sobre</h2>
                 <p class="my-0">
-                    Profissional com experiência em desenvolvimento full-stack, atuando com .NET 8, Vue.js, SQL, Azure
+                    Profissional com experiência em desenvolvimento full stack, atuando com .NET 8, Vue.js, SQL, Azure
                     DevOps e AWS para infraestrutura. Ao longo de três anos na CEABS Serviços, venho aplicando práticas
                     modernas de engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado
                     a metodologias ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, atuei tanto
@@ -51,7 +51,7 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-2">Objetivo</h2>
-                <p class="mb-0">Oportunidade na área de TI — Desenvolvedor full-stack</p>
+                <p class="mb-0">Oportunidade na área de TI — Desenvolvedor Full Stack</p>
             </div>
         </section>
 
@@ -114,7 +114,7 @@
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li>
-                                Full-Stack de aplicações internas em Python/Flask em ambiente Linux.
+                                Full Stack de aplicações internas em Python/Flask em ambiente Linux.
                             </li>
                             <li> Interface entre os dados gerados pelos métodos tradicionais de análise química do solos
                                 e a plataforma de IA AGLIBS; coordenação da geração e emissão de laudos comerciais e
@@ -122,7 +122,7 @@
                             </li>
                             <li>
                                 Análises exploratórias em dados espectrais utilizando MATLAB e Python (NumPy, Pandas,
-                                Scikit-learn,Matplotlib)
+                                Scikit-learn, Matplotlib)
                             </li>
                             <li>
                                 Estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure).
@@ -193,83 +193,49 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Pesquisador - Estudante de doutorado</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2015 - Outubro 2019</span></div>
+                        <h3 class="mb-0">Pesquisador - Mestrado e Doutorado</h3>
+                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Outubro 2019</span></div>
                         <div class="subheading mb-3">EMBRAPA Instrumentação</div>
                         <ul>
-                            <li> Desenvolvimento da tese no Laboratório de Óptica e Fotônica da Embrapa Instrumentação,
-                                sob orientação da Dra. Débora. O trabalho intitulado:
-                                <a href="https://teses.usp.br/teses/disponiveis/75/75135/tde-04022020-160742/pt-br.php"
-                                    target="_blank"> "Reuso de resíduos da indústria sucroalcooleira:
-                                    Impacto na qualidade do solo e novos métodos de caracterização utilizando LIBS"</a>.
-                                O primeiro objetivo do trabalho foi o estudo dos efeitos da aplicação de resíduos da
-                                industria sucroalcooleira, tais como torta de filtro e cinzas de bagaço de
-                                cana-de-açúcar, em solos na forma de biofertilizantes tanto do ponto de vista de matéria
-                                orgânica (MOS)
-                                e o índice de humificação durante a evolução temporal. Já o segundo foi o
-                                desenvolvimento e validação de métodos para a quantificação de macro e micronutrientes
-                                presentes nos resíduos
-                                e o potencial para fertilização utilizando técnicas como a Espectroscopia de Absorção
-                                Atômica (FAAS) e digestão tanto em bloco aberto quanto assistida por microondas e a
-                                Espectrometria de emissão óptica com plasma induzido por laser (LIBS).
-                            </li><br>
+                            <li>Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação, com
+                                uso de MATLAB e Python para análise multivariada e calibração de dados espectrais.</li>
+                            <li>Construção e validação de modelos para análise de solos utilizando espectroscopias
+                                avançadas: LIBS (Laser-Induced Breakdown Spectroscopy), LIFS (Laser-Induced Fluorescence
+                                Spectroscopy) e FAAS (Espectroscopia de Absorção Atômica).</li>
+                            <li>Desenvolvimento de métodos e modelos de predição aplicados à química e ciência do solo,
+                                com foco na quantificação de carbono e nutrientes em diferentes sistemas produtivos.
+                            </li>
+                            <li>Avaliação do acúmulo e emissão de carbono do solo sob diferentes práticas de manejo,
+                                integrando análises espectroscópicas e estatísticas para modelagem de estoque de carbono
+                                e gases do efeito estufa.</li>
+                            <li>Estudos com resíduos agroindustriais para uso como biofertilizantes, incluindo
+                                desenvolvimento de metodologias para caracterização química e impacto na qualidade do
+                                solo.</li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Pesquisador - Estudante de mestrado</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Maio de 2014</span></div>
-                        <div class="subheading mb-3">EMBRAPA Instrumentação</div>
-                        <ul>
-                            <li> Desenvolvimento do trabalho no Laboratório de Óptica e Fotônica da Embrapa
-                                Instrumentação (São Carlos-SP), sob a orientação da Dra. Débora Marcondes Bastos Pereira
-                                Milori.
-                                O trabalho intitulado <a
-                                    href="https://teses.usp.br/teses/disponiveis/75/75135/tde-10122014-101014/pt-br.php"
-                                    target="_blank">"Avaliação do acúmulo e emissão de carbono do solo sob
-                                    sistemas produtivos de pastagem"</a>. O trabalho teve como objetivo foi avaliar
-                                manejos do sistema produtivo de pecuária, em pastagens de <i>Brachiaria decumbens</i>.
-                                O foco principal do trabalho foi a avaliação da dinâmica de carbono no solo, ou seja,
-                                sequestro de C-CO<sub>2</sub> e a emissão dos gases do efeito estufa, através da
-                                execução de
-                                boas práticas de manejo. Várias estratégias de cálculo de estoque de carbono (EC) e
-                                avaliação do efeito dos manejos foram consideradas. Foram avaliados solos de sistemas
-                                produtivos de
-                                pastagem com enfoque na matéria orgânica do solo utilizando técnicas espectroscópicas
-                                tais como a Espectroscopia de Fluorescência Induzida por Laser (LIFS) e a Espectroscopia
-                                de
-                                Emissão Óptica com Plasma Induzido por Laser (LIBS)na construção e validação de métodos
-                                para quantificações elementares.
-                                <p> Essa dissertação de mestrado foi vencedora nacional do Prêmio Vale-Capes de Ciência
-                                    e Sustentabilidade 2016, como melhor dissertação na área de Redução de Gases do
-                                    efeito estufa (GEE).</p>
-                            </li><br>
-                        </ul>
-                    </div>
-                </div>
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Pesquisador - Estagiário de química</h3>
+                        <h3 class="mb-0">Pesquisador - Estágio de Conclusão de Curso</h3>
                         <div class="flex-shrink-0"><span class="text-primary">Setembro 2010 - Dezembro 2010</span></div>
                         <div class="subheading mb-3">EMBRAPA Pecuária Sudeste</div>
                         <ul>
-                            <li> Desenvolvimento do trabalho de conclusão de curso no laboratório de Nutrição Animal
-                                (LNA) na Embrapa Pecuária Sudeste com trabalho intitulado:
-                                "Desenvolvimento de modelos de calibração multivariada utilizando espectroscopia de
-                                infravermelho próximo (NIRS) em amostras de forrageiras".
-                                Esse trabalho teve grande importância na formação acadêmica, pois foi onde inicou-se o
-                                interesse da aplicação da matemática, estatística e computação a dados de análise
-                                química instrumental.</li>
+                            <li>Desenvolvimento de modelos de calibração multivariada para análise de forrageiras
+                                utilizando espectroscopia de infravermelho próximo (NIRS).</li>
+                            <li>Integração de matemática, estatística e computação para tratamento de dados de análises
+                                químicas instrumentais.</li>
+                            <li>Primeiro contato com modelagem preditiva aplicada à química, consolidando a base para
+                                trabalhos futuros em ciência de dados e predição química.</li>
                         </ul>
                     </div>
                 </div>
+
             </div>
         </section>
 
-        <hr />
+        <div class="page-break"></div>
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
@@ -391,7 +357,7 @@
                     </li>
                 </ul>
 
-                <div class="page-break"></div>
+                <!-- <div class="page-break"></div> -->
 
                 <div class="subheading my-2"> <strong> Demais habilidades </strong></div>
                 <ul class="fa-ul mb-0">
@@ -412,12 +378,13 @@
                     </li>
                 </ul>
 
+                <div class="page-break"></div>
+
                 <div class="subheading mb-1"> <strong>Idiomas </strong></div>
                 <ul class="fa-ul mb-0">
                     <li>Inglês – Leitura e escrita em nível intermediário; fala em nível básico.</li>
                     <li>Proficiência TEAP da TESE PRIME com pontuação: 88/100.</li>
                     <li>Proficiência WAP da TESE PRIME com potuação: 70/100.</li>
-                    <br>
                 </ul>
             </div>
 
@@ -461,7 +428,6 @@
                         Facilidade de aprendizagem
                     </li>
 
-                    <br>
                 </ul>
 
                 <!-- <div class="page-break"></div> -->
