--- a/pdf.html
+++ b/pdf.html
@@ -62,8 +62,10 @@
                 <h2 class="mb-2">Experiência profissional</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Desenvolvedor Full Stack Pleno</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">2023 - Atualmente</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Desenvolvedor Full Stack Pleno</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2023 - Atualmente</span></div>
+                        </div>
                         <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                         <ul>
                             <li>
@@ -109,8 +111,10 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Cientista de dados pleno</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2023</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Cientista de dados pleno</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2021 - 2023</span></div>
+                        </div>
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li>
@@ -151,8 +155,10 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Químico pesquisador</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">2019 - 2021</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Químico pesquisador</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2019 - 2021</span></div>
+                        </div>
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li> Estruturação física e operacional do laboratório químico, incluindo seleção de
@@ -180,8 +186,10 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Editor freelancer</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2019</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Editor freelancer</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2013 - 2019</span></div>
+                        </div>
                         <div class="subheading mb-3">Poliedro Educação</div>
                         <ul>
                             <li>Criação edição e resolução de questões para simulados do Sistema de Avaliação
@@ -193,8 +201,11 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Pesquisador - Mestrado e Doutorado</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Outubro 2019</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Pesquisador - Mestrado e Doutorado</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2012 - 2019</span>
+                            </div>
+                        </div>
                         <div class="subheading mb-3">EMBRAPA Instrumentação</div>
                         <ul>
                             <li>Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação, com
@@ -218,8 +229,12 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Pesquisador - Estágio de Conclusão de Curso</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Setembro 2010 - Dezembro 2010</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+
+                            <h3 class="mb-0">Pesquisador - Estágio de Conclusão de Curso</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2010 - 2010</span>
+                            </div>
+                        </div>
                         <div class="subheading mb-3">EMBRAPA Pecuária Sudeste</div>
                         <ul>
                             <li>Desenvolvimento de modelos de calibração multivariada para análise de forrageiras
@@ -242,8 +257,10 @@
                 <h2 class="mb-2">Formação acadêmica</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Universidade de São Paulo - USP</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2015 - Outubro 2019</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Universidade de São Paulo - USP</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2015 - 2019</span></div>
+                        </div>
                         <div class="subheading mb-3">Doutorado em Química Analítica</div>
                         <!-- <p>Atividades e disciplinas relevantes:</p>
                         <ul>
@@ -280,8 +297,10 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Universidade de São Paulo - USP</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Maio 2014</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Universidade de São Paulo - USP</h3>
+                            <div class="flex-shrink-0"><span class="text-primary">2012 - 2014</span></div>
+                        </div>
                         <div class="subheading mb-3">Mestrado em Química Analítica</div>
                         <!-- <p>Atividades e disciplinas relevantes:</p>
                         <ul>
@@ -308,8 +327,10 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Universidade Federal de São Carlos - UFSCAR</h3>
-                        <div class="flex-shrink-0"><span class="text-primary">Feveiro 2006 - Maio 2011</span></div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 class="mb-0">Universidade Federal de São Carlos - UFSCAR</h3>
+                            <div class="flex-shrink-0"><span class="text-primary"> 2006 - 2011</span></div>
+                        </div>
                         <div class="subheading mb-3">Bacharel em Química com atribuições tecnológicas</div>
                     </div>
                 </div>
