--- a/pdf.html
+++ b/pdf.html
@@ -76,7 +76,7 @@
                                 TypeScript.
                             </li>
                             <li>
-                                Utilização de banco de dados relacional - SQL Server.
+                                Utilização de banco de dados relacional e ORM (Dapper e EF6) - SQL Server.
                             </li>
                             <li>
                                 Testes unitários aplicando TDD em xUnit.
@@ -161,24 +161,24 @@
                         </div>
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
-                            <li> Estruturação física e operacional do laboratório químico, incluindo seleção de
-                                equipamentos,
-                                vidrarias e reagentes, bem como fornecedores e triagem deorçamentos;
-                            </li>
                             <li> Implementação de métodos de análise de fertilidade do solo, com o objetivo de geração
                                 dados
                                 de referência dos modelos de predição
                             </li>
                             <li> Elaboração e validação dos métodos analíticos para geração de dados de referências para
-                                amostras de solo utilizando a Espectroscopia de Emissão Atômica por Plasma Acoplado
-                                Indutivamente (ICP-OES);
+                                amostras de solo utilizando a Espectroscopia (ICP-OES);
+                            </li>
+                            <li> Aperfeiçoamento dos processos internos da empresa (PDCA), os quais abrangem desde a
+                                coleta à
+                                emissão do laudo e mapas de recomendação agronômica ao cliente;
                             </li>
                             <li>
                                 Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo;
                             </li>
-                            <li> Aperfeiçoamento dos processos internos da empresa, os quais abrangem desde a coleta à
-                                emissão do laudo e mapas de recomendação agronômica ao cliente;
-                            </li>
+                            <!-- <li> Estruturação física e operacional do laboratório químico, incluindo seleção de
+                                equipamentos,
+                                vidrarias e reagentes, bem como fornecedores e triagem deorçamentos;
+                            </li> -->
                             <li> Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.</li>
                         </ul>
                     </div>
@@ -192,9 +192,14 @@
                         </div>
                         <div class="subheading mb-3">Poliedro Educação</div>
                         <ul>
-                            <li>Criação edição e resolução de questões para simulados do Sistema de Avaliação
+                            <li>Trabalho editorial para simulados do Sistema de Avaliação
                                 Educacional
-                                Poliedro (SAEP);</li>
+                                Poliedro (SAEP);
+                            </li>
+                            <!-- <li>Criação edição e resolução de questões para simulados do Sistema de Avaliação
+                                Educacional
+                                Poliedro (SAEP);
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -211,17 +216,22 @@
                             <li>Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação, com
                                 uso de MATLAB e Python para análise multivariada e calibração de dados espectrais.</li>
                             <li>Construção e validação de modelos para análise de solos utilizando espectroscopias
+                                avançadas.
+                            </li>
+                            <!-- <li>Construção e validação de modelos para análise de solos utilizando espectroscopias
                                 avançadas: LIBS (Laser-Induced Breakdown Spectroscopy), LIFS (Laser-Induced Fluorescence
-                                Spectroscopy) e FAAS (Espectroscopia de Absorção Atômica).</li>
+                                Spectroscopy) e FAAS (Espectroscopia de Absorção Atômica).</li> -->
                             <li>Desenvolvimento de métodos e modelos de predição aplicados à química e ciência do solo,
                                 com foco na quantificação de carbono e nutrientes em diferentes sistemas produtivos.
                             </li>
                             <li>Avaliação do acúmulo e emissão de carbono do solo sob diferentes práticas de manejo,
                                 integrando análises espectroscópicas e estatísticas para modelagem de estoque de carbono
-                                e gases do efeito estufa.</li>
+                                e gases do efeito estufa.
+                            </li>
                             <li>Estudos com resíduos agroindustriais para uso como biofertilizantes, incluindo
                                 desenvolvimento de metodologias para caracterização química e impacto na qualidade do
-                                solo.</li>
+                                solo.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -238,7 +248,9 @@
                         <div class="subheading mb-3">EMBRAPA Pecuária Sudeste</div>
                         <ul>
                             <li>Desenvolvimento de modelos de calibração multivariada para análise de forrageiras
-                                utilizando espectroscopia de infravermelho próximo (NIRS).</li>
+                                utilizando espectroscopia.</li>
+                            <!-- <li>Desenvolvimento de modelos de calibração multivariada para análise de forrageiras
+                                utilizando espectroscopia de infravermelho próximo (NIRS).</li> -->
                             <li>Integração de matemática, estatística e computação para tratamento de dados de análises
                                 químicas instrumentais.</li>
                             <li>Primeiro contato com modelagem preditiva aplicada à química, consolidando a base para
